--- a/Dark Matter Earth Modes/DMEarthModes.tex
+++ b/Dark Matter Earth Modes/DMEarthModes.tex
@@ -109,7 +109,7 @@ For n=0, l=0, m=0 mode:
 
 \[\mathbf u_{0,0}(\mathbf r,\omega)=\frac{- 4\pi iQf(\omega)}{\sqrt{3}M \omega^2}\ \hat \mathbf {n}(\mathbf r)\ Y_{1}^{0}(\hat\mathbf p)\ c_{0,0} \int_0^R \frac{dj_0(qr)}{d(qr)} j_{1}(pr') r'^2 dr' \]
 
-\[c_{0,0}^2=\frac{M}{4\pi \rho}\int_0^R \bigg(\frac{dj_0(qr)}{d(qr)}\bigg)^* \frac{dj_0(qr)}{d(qr)} r^2 dr\]
+\[c_{0,0}^2=\frac{M}{4\pi \rho}\bigg(\int_0^R \bigg(\frac{dj_0(qr)}{d(qr)}\bigg)^* \frac{dj_0(qr)}{d(qr)} r^2 dr\bigg)^{-1}\]
 
 For n=0, l=1, m=0 mode:
 
