--- a/BeamSplitterFiber/BSFiberProcedure.tex
+++ b/BeamSplitterFiber/BSFiberProcedure.tex
@@ -16,16 +16,16 @@
 This document describes the procedure to create a beam splitter optical fiber that satisfies the LIGO vacuum compatibility requirements [1]. The final product is a optical fiber with a flat faced beam-splitter tip on one end and an angled connector on the other that can then be used for cBRS fiber interferometer readouts. The use of a flat faced connector is necessary to allow the reflected beam to couple back through the fiber while the angled connection is utilized to decrease spurious reflection when connected to other optical fiber components.
 \section{Materials}
 \begin{itemize}
-\item 1 FC/APC optical fiber connector
-\item 1 FC/PC optical fiber connector
+\item 1 (+extras) FC/APC optical fiber connector
+\item 1 (+extras) FC/PC optical fiber connector
 \item Nufern S1310-P (Polymide coated fiber)
 \item Epo-Tek 353ND (UHV epoxy)
 \end{itemize}
 \section{Steps}
 \begin{enumerate}
-\item Clean connectors in an ultrasonic cleaner of deionized water or alcohol for roughly ten minutes.
+\item Clean connectors in an ultrasonic cleaner of deionized water or alcohol for roughly ten minutes. Make sure to clean more connectors than you need as they will become unusable if the fiber breaks while threading. 
 \item Strip an inch long section of the fiber using a household lighter. Gently "brush" the flame over the fiber many times until the polymide is completely burnt away then clean the section with an alcohol soaked Kim-wipe and finally blow off with compressed air.
-\item Connectorize the fiber with a FC/APC connector on one end and a FC/PC connector on the other by following the Thorlabs Guide to Connectorization and Polishing Optical Fibers while omitting all steps pertaining to non-vacuum compatible pieces. Specifically do not include the strain relief or the jacket material. Additionally, use Epo-Tek 353ND instead of the given epoxy. Be especially gentle while threading the fiber through the ferule as it will be brittle due to the polymide removal.
+\item Connectorize the fiber with a FC/APC connector on one end and a FC/PC connector on the other by following the Thorlabs Guide to Connectorization and Polishing Optical Fibers while omitting all steps pertaining to non-vacuum compatible pieces. Specifically do not include the strain relief or the jacket material. Additionally, use Epo-Tek 353ND instead of the given epoxy. Be especially gentle while threading the fiber through the ferule as it will be brittle due to the polymide removal. If fiber gets stuck while threading, remove, clean both the fiber and ferule, and reflame fiber tip before trying again.
 \item Insert into sputterer and connect angle end to feed through and flat end to a mount over the sputtering source.
 \item Connect cBRS readout box to the feed through using a patch cable.
 \item Cover fiber except for the very tip to keep gold off the rest of the fiber.
