--- a/BeamSplitterFiber/BSFiberProcedure.tex
+++ b/BeamSplitterFiber/BSFiberProcedure.tex
@@ -46,7 +46,7 @@ Gold Power: 15 W
 Rate: 0.3 \AA/sec
 
 \includegraphics[width=\textwidth]{Gold_Coating_Fiber.pdf}
-Above is an example run using this set-up where gold was added until the reflectance was close to 100\%. The curve does not follow the naive expectation from a skin depth picture which would predict an exponential decay to one with increased thickness. The true curve has a dip in reflectance with small thickness that has yet to be explained but follows this curve predictably. There is additionally some secondary interference which is believed to be caused by refections within the feedthrough.
+Above is an example run using this set-up where gold was added until the reflectance was close to 100\%. The curve does not follow the naive expectation from a skin depth picture which would predict an exponential decay to one with increased thickness. The true curve has a dip in reflectance with small thickness that is believed to be from a peak in the absorption due to the changing size of the gold islands as material is added. There is additionally some secondary interference which is believed to be caused by refections within the feedthrough.
 
 \section{Example 50-50 Beamsplitter}
 Below is an example of the creation of a roughly 50-50 beamsplitter. The sputtering was turned off at about 330 seconds which is then promptly followed by ringing of the secondary interference with a gradual rise. This rise is not representative of true increase of reflection as this fiber was measured after the fact to have a reflectance of 45\%.\\
@@ -62,6 +62,9 @@ Reflentance: 45\%
 Time:  5 min 40 sec
 
 \includegraphics[width=\textwidth]{BS_Coating_Fiber_Time.pdf}
+
+The following images show microscope images of this fiber at two separate zooms. It is apparent with these images that the gold is coating the ceramic ferule uniformly yet does not form a uniform layer on the fiber tip. This will increase the loss of the coating as some of the returning beam will be reflected into higher order fiber modes and thus attenuated as they propagate down the fiber.\\
+
 \includegraphics[width=0.5\textwidth]{GoldFiberTip.JPG}
 \includegraphics[width=0.5\textwidth]{GoldFiberTipZoom.JPG}
 \section{References}
