Worked on intro.

--- a/Sine Fitting/SineFitNote.tex
+++ b/Sine Fitting/SineFitNote.tex
@@ -72,10 +72,10 @@ Rearranging:
 
 At the end this allows one to construct $\mathbf{X}$ for the frequencies of interest and quickly fit the data with a simply one line matrix multiplication. The parameters that come out also need no corrections and can easily be shifted into amplitude and phase using (for $\omega_1$):
 \begin{equation}
-A_1=\sqrt{\beta_1^2+\beta_2^2}
+A_1=\sqrt{a_1^2+b_1^2}
 \end{equation}
 \begin{equation}
-\phi_1=\arctan(\beta_2/\beta_1)
+\phi_1=\arctan(b_1/a_1)
 \end{equation}
 
 
