Worked on equations of motion and response function.

--- a/TorsionBalances/TorsionBalances.tex
+++ b/TorsionBalances/TorsionBalances.tex
@@ -7,7 +7,7 @@
 \begin{document}
 
 \title{Torsion Balances}
-\author{M.P.Ross for the E\"ot-Wash Group}
+\author{M.P.Ross for the E\"ot-Wash Group \\ University of Washington}
 
 \maketitle
 
@@ -21,7 +21,11 @@
 
 \quad A torsion balance, in it's simplest incarnation, is just an extended body, called the "pendulum," suspended from a thin wire, the "torsion fiber." This forms a rotational spring-mass system which has two intrinsic parameter (ignoring loss terms): the moment of inertia, $I$, and the torsional spring constant, $\kappa$. The primary degree of freedom of this system is rotation of the pendulum around the axis of the fiber which we call torsion. See Section~\ref{swing} for discussion of other degrees of freedom.
 
-Due to historical reasons, the classical example of a torsion balance is a dumb-bell shaped pendulum suspended from a thin metal fiber, shown in Figure~\ref{simpleFig}. The pendulum is formed by a massless rod with two equal mass "test masses" attached to each end. The torsion fiber is then attached to the rod at equal distance to each test mass. This provides a prototypical model of a torsion balance which we will analyze in detail. 
+Restricting ourselves to only the torsional degree of freedom gives us:
+\begin{equation}
+I \ddot{\theta}(t)=\sum_i \tau_i(t)
+\end{equation}
+where $\theta$ is the angle of the pendulum about vertical, $t$ is time, and $\tau_i$ are the torques acting on the pendulum. Here we use Newton's notation for derivatives with respect to time, $\dot{x}=\partial x/\partial t$ and $\ddot{x}=\partial^2 x/\partial t^2$. 
 
 \begin{figure}[!h]
 \begin{centering}
@@ -30,16 +34,73 @@ Due to historical reasons, the classical example of a torsion balance is a dumb-
 \end{centering}
 \end{figure}
 
-Modern torsional balance apparatus typically have pendulums with more complex geometry and may have multiple suspension stages. 
+From Hooke's law, the torsional spring adds a restoring torque that follows:
+\begin{equation}
+\tau_{\text{spring}}(t) = \kappa (\theta(t)-\theta_0)
+\end{equation}
+where $\theta_0$ is the equilibrium angle of the torsion balance. For most situations this is the dominant torque acting on the pendulum.
 
-\subsection{Equation of Motion}
+Due to historical reasons, the classical example of a torsion balance is a dumb-bell shaped pendulum suspended from a thin metal fiber, shown in Figure~\ref{simpleFig}. The pendulum is formed by a massless rod with two equal mass "test masses" attached to each end. The torsion fiber is then attached to the rod at equal distance to each test mass. This provides a prototypical model of a torsion balance which we will analyze in detail. Modern torsional balance apparatus typically have pendulums with more complex geometry and may have multiple suspension stages. 
 
-As mentioned in Section~\ref{simple}, the simple torsion balance is described with two primary parameter: the moment of inertia, $I$, which is determined by the pendulum geometry, and the torsional spring constant, $\kappa$, which is determined by the torsion fiber size and material. 
+\subsection{Loss Terms}
+
+There are two primary sources of loss in torsion balances: external and internal damping. External damping, sometimes called velocity damping, is caused by external forces acting on the pendulum that are proportional to the angular velocity of the pendulum, such as air friction. Internal damping, on the other hand, is caused by energy dissipation internal to the torsion fiber.
+
+External damping adds a torque on the pendulum that is proportional to the angular velocity of the pendulum:
+\begin{equation}
+\tau_{\text{vel}}(t) = \gamma \dot{\theta}(t)
+\end{equation}
+where $\gamma$ is the damping constant. Where as internal damping can be modeled by a complex spring constant:
+\begin{equation}
+\tau_{\text{spring}}(t) =  \kappa(1+i\delta) \big(\theta(t)-\theta_0\big)
+\end{equation}
+where $\delta$ is the dimensionless internal loss parameter.
+
+For most modern torsion balances, external damping is engineered away and is thus much smaller than the internal damping. Thus we will shelve discussion of external damping until Section \ref{gas}
+
+\subsection{Equations of Motion}
+
+\quad As mentioned in Section~\ref{simple}, the simple torsion balance is described with two primary parameters: the moment of inertia, $I$, which is determined by the pendulum geometry, and the torsional spring constant, $\kappa$, which is determined by the torsion fiber size and material. Adding in internal damping, this system obeys the following equation of motion:
+\begin{equation}
+I~\ddot{\theta}(t)+\kappa(1+i\delta)  \big(\theta(t)-\theta_0\big) = \tau_{\text{ext}}(t) \label{eom}
+\end{equation}
+where $\tau_{\text{ext}}(t)$ is the sum of all exterior torques acting on the pendulum.
+
+If we assume a harmonic solution, $\theta(t)=A~e^{i\omega t}$, we can transform Equation~\ref{eom} into the Fourier domain to yield:
+\begin{equation}
+\big(-I\omega^2+\kappa(1+i\delta) \big) \tilde{\theta}(\omega)= \tau_{\text{ext}}(\omega) \label{four}
+\end{equation}
+It is convenient to define two parameters here: the resonant frequency, $\omega_0=\sqrt{\kappa/I}$, and the quality factor, $Q=\frac{1}{\delta}$. Equation \ref{four} can then be rearranged to:
+
+\begin{equation}
+ \tilde{\theta}(\omega)= \frac{\tau_{\text{ext}}(\omega)}{\kappa}\frac{1}{1-\frac{\omega^2}{\omega_0^2} +i/Q} \label{four2}
+\end{equation}
+
+\subsection{Response Function}
+
+\quad The second dimensionless factor in Equation \ref{four2} is traditionally called the response function or transfer function of the system. It controls the amount of angle the pendulum gets for a given torque as a function of frequency. 
+
+\begin{equation}
+R(\omega)= \frac{1}{1-\frac{\omega^2}{\omega_0^2} +i/Q} \label{four2}
+\end{equation}
+
+For a pendulum with no damping, $Q\rightarrow\infty$, the response function has three distinct features. Below the resonant frequency, $\omega << \omega_0$, the response goes to unity. Above the resonant frequency, $\omega >> \omega_0$, the response function follows $R(\omega)=-\omega_0^2/\omega^2$ causing effect of high frequency torques to decrease as $1/\omega^2$. At the resonant frequency, $\omega=\omega_0$ the response goes to infinity. This causes the motion at this frequency to grow without limit.
+
+With damping, the response has a similar structure albeit with different amplitudes. Namely at the resonance the response does not approach infinity but instead $R(\omega)=-i Q$. The quality factor, hence the amount of damping, limit the maximum resonant motion for a given input torque. Additionally, the quality factor widens the peak to no longer be a delta function 
+
+The full response function is plotted in Figure \ref{respPlot} for a variety of quality factors and a resonant frequency of 0.1 Hz.
+
+\begin{figure}[!h]
+\begin{centering}
+\includegraphics[width=\textwidth]{ResponseFunction.pdf}
+\caption{A simple torsion balance system.}\label{respPlot}
+\end{centering}
+\end{figure}
 
 \section{Mechanics}
 \subsection{Torque Sensing}
 \subsection{Inertial Sensing}
-\subsection{Fiber Selection}
+\subsection{Fiber Selection} \label{fiber}
 \subsection{Pendulum Design}
 
 \section{Complications}
@@ -48,11 +109,11 @@ As mentioned in Section~\ref{simple}, the simple torsion balance is described wi
 \subsection{Multiple Pendulums}
 
 \section{Noise Sources and Mitigation}
-\subsection{Thermal Noise}
+\subsection{Thermal Noise} \label{thermal}
 \subsection{Seismic Motion}
 \subsection{Electrostatic Couplings}
 \subsection{Magnetic Noise}
-\subsection{Gas Damping}
+\subsection{Gas Damping} \label{gas}
 \subsection{Gravity Gradients}
 
 \section{Case Study Experiments}
